Add https pages downloading functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ include_directories(${INC_DIR})
 set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 file(GLOB SRC_FILES "${SRC_DIR}/*.cpp")
 
+find_package(OpenSSL REQUIRED)
+
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/lib/boost_1_85_0")
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/libpqxx-7.8.1" libpqxx_build)
@@ -20,6 +22,7 @@ add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/libpqxx-7.8.1" libpqxx_build)
 add_executable(${EXECUTABLE} ${SRC_FILES})
 
 target_link_libraries(${EXECUTABLE} pqxx)
+target_link_libraries(${EXECUTABLE} OpenSSL::SSL)
 
 add_custom_command(
         TARGET SearchEngine POST_BUILD
