--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ password=PSQL048667&
 
 
 [settings]
-startpage=http://httpforever.com
+startpage=https://en.wikipedia.org/wiki/C%2B%2B
 recursiondepth=10
 port=9999
 resultpath=
