--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,6 @@ password=PSQL048667&
 
 
 [settings]
-startpage=https://en.wikipedia.org/wiki/C%2B%2B
-recursiondepth=10
-port=9999
-resultpath=
+startpage=https://en.wikipedia.org/wiki/Hurricane_Irene_(2005)
+recursiondepth=1
+port=80
