--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,6 @@ password=PSQL048667&
 
 
 [settings]
-startpage=https://en.wikipedia.org/wiki/Hurricane_Irene_(2005)
+startpage=https://marvelcinematicuniverse.fandom.com/wiki/Marvel_Cinematic_Universe_Wiki
 recursiondepth=2
 port=80
