Exceptions text output to server added (not fully works). Code refactoring

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,6 @@ password=PSQL048667&
 
 
 [settings]
-startpage=https://marvelcinematicuniverse.fandom.com/wiki/Marvel_Cinematic_Universe_Wiki
+startpage=https://starwars.fandom.com/wiki/Main_Page
 recursiondepth=2
 port=80
